# Functioneel_programmeren

./: Examen.txt  README  week3.hs  week5.hs  week6.hs  week8_start.hs
LESSEN/: dependencies.cabal  week1.hs  week11.hs  week2.hs  week4.hs  week6_papier_steen_schaar.hs  week8_oplossing.hs
LESSEN/RUST/Les01/: Cargo.toml
LESSEN/RUST/Les01/src/: main.rs
LESSEN/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
TAKEN/: Input_Taak_3.txt  dependencies.cabal  main.hs  mainGUI.hs  taak1_strat1.hs  taak1_strat2.hs  taak1_strat3.hs
TAKEN/Taak_1/: taak1_strat1.hs  taak1_strat3.hs
TAKEN/Taak_2/: Taak2.hs
TAKEN/Taak_3/: Input_Taak_3.txt  Output_Taak_3.txt  Taak3.hs  generatedInput.txt  input.txt
TAKEN/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
