cabal-version: 2.4
name: your-project-name
version: 0.1.0.0
build-type: Simple

library
    exposed-modules:     Your.Module.Name
    hs-source-dirs:      src
    build-depends:       base >=4.14 && <5,
                                             threepenny-gui >=0.9 && <0.10
    default-language:    Haskell2010

executable week11
    main-is:             week11.hs
    hs-source-dirs:      .
    build-depends:       base >=4.14 && <5,
                                             threepenny-gui >=0.9 && <0.10
    default-language:    Haskell2010